css update and localStorage fix

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -17,9 +17,8 @@ html{
 body{
     margin: 0;
     padding: 0;
-    color:#080706;
-    background-color: #EFEFEF;
-
+    background-color: #FCFDFE;
+    color: #080706;
 }
 
 .mr-1{
