--- a/src/css/app.css
+++ b/src/css/app.css
@@ -25,6 +25,16 @@ body{
     margin-right: 5px;
 }
 
+.app__h2{
+    font-size: 24px;
+    width: 50%;
+    text-align: center;
+    color: #896E69; 
+    border-radius: 5px;
+    
+
+}
+
 
 
 
